fix: youtube embedded videos overflow on mobile issue in https://github.com/LunarVim/lunarvim.org/pull/243

--- a/src/components/YouTube/styles.module.css
+++ b/src/components/YouTube/styles.module.css
@@ -11,6 +11,7 @@
   aspect-ratio: 16/9;
   height: auto;
   width: 100%;
+  max-width: 100%;
 }
 
 .yt > h2 {
